[gd_scene load_steps=5 format=4 uid="uid://cxd7txem0rmxm"]

[ext_resource type="Script" path="res://Scenes/battle.gd" id="1_ah14u"]
[ext_resource type="Texture2D" uid="uid://d4btevtjmv7k4" path="res://Assets/background.png" id="1_pqq33"]
[ext_resource type="PackedScene" uid="uid://xt4qghslr78e" path="res://Scenes/player_td.tscn" id="2_2xrsj"]
[ext_resource type="PackedScene" uid="uid://cssy064ugpm1q" path="res://Scenes/Tiles/tiles.tscn" id="3_xddaa"]

[node name="battle" type="Node2D"]
script = ExtResource("1_ah14u")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(317, 167.5)
scale = Vector2(1.53472, 1.84259)
texture = ExtResource("1_pqq33")

[node name="player_td" parent="." instance=ExtResource("2_2xrsj")]
position = Vector2(285, 181)

[node name="Camera2D" type="Camera2D" parent="player_td"]
position = Vector2(1, -23)
zoom = Vector2(1.1, 1.1)
limit_left = 0
limit_top = 0
limit_right = 575
limit_bottom = 319
editor_draw_limits = true

[node name="Tiles" parent="." instance=ExtResource("3_xddaa")]
tile_map_data = PackedByteArray("AAAJAAMAAQAAAAAAAAAJAAQAAQAAAAEAAAAJAAUAAQAAAAIAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAEAAAAJAAIAAQAAAAIAAAAJAP//AQAAAAIAAAAGAP//AQAAAAIAAAAHAP//AQABAAIAAAAIAP//AQACAAIAAAADAP//AQAAAAIAAAAEAP//AQABAAIAAAAFAP//AQACAAIAAAAAAP//AQAAAAIAAAABAP//AQABAAIAAAACAP//AQACAAIAAAD/////AQACAAAAAAD//wAAAQACAAEAAAD//wEAAQACAAIAAAD//wIAAQACAAAAAAD//wMAAQACAAEAAAD//wQAAQACAAIAAAD//wUAAQACAAAAAAD//wYAAQACAAEAAAAAAAYAAQAAAAEAAAABAAYAAQABAAEAAAACAAYAAQACAAEAAAADAAYAAQAAAAEAAAAEAAYAAQABAAEAAAAFAAYAAQACAAEAAAAGAAYAAQAAAAEAAAAHAAYAAQABAAEAAAAIAAYAAQACAAEAAAAAAAUAAQABAAEAAAABAAUAAQABAAEAAAACAAUAAQABAAEAAAADAAUAAQABAAEAAAAEAAUAAQABAAEAAAAFAAUAAQABAAEAAAAGAAUAAQABAAEAAAAHAAUAAQABAAEAAAAIAAUAAQABAAEAAAA=")

[node name="SpawnLocation" type="Node2D" parent="."]
position = Vector2(44, 109)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Position" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(44, 188)

[node name="Position2" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(288, 40)

[node name="Position3" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(524, 200)

[node name="Position4" type="Marker2D" parent="." groups=["spawn"]]
position = Vector2(289, 304)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
